test/compile_error/typemismatch.conf.4.def
config type_mismatch_conf {
	enum foo_t { FOO, BAR, BAZ }
	foo : foo_t = "hoge";
}
